# ytkaudio

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: config.py  logs.py  main.pyw
